// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c6 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c6:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c7 > .c1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c6 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}

.IS14 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="css-reset-4rbku5 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c0 IS6"
        />
        <div
          className="c1 c2"
        >
          <div
            className="css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c1 c3 c4"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c6"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS14"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c6 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c6:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c7 > .c1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c6 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Flama-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}

.IS14 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="css-reset-4rbku5 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="css-reset-4rbku5 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c0 IS6"
        />
        <div
          className="c1 c2"
        >
          <div
            className="css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c1 c3 c4"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c6"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS14"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c6 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c6:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c7 > .c1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c6 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: CenturyGothic-Bold;
  text-transform: uppercase;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}

.IS14 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="css-reset-4rbku5 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="css-reset-4rbku5 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c0 IS6"
        />
        <div
          className="c1 c2"
        >
          <div
            className="css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c1 c3 c4"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c6"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS14"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c6 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c6:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c7 > .c1 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  background-color: #FFFFFF;
  height: 60px;
}

.c5 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c5.tc-sticky {
  will-change: height,box-shadow;
}

.c5[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c5[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c4 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c4 + .c3 {
  margin-top: -1px !important;
}

.c4:last-child {
  margin-bottom: 30px;
}

.c4.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c6 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}

.IS14 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="css-reset-4rbku5 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="css-reset-4rbku5 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c0 IS6"
        />
        <div
          className="c1 c2"
        >
          <div
            className="css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c1 c3 c4"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c5"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c6"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS14"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
